# TMS_async_app

./: README.md  main.py  pyproject.toml
async_app/: models.py  urls.py  views.py
async_app/database/: base.py  connector.py
async_app/middleware/: auth.py  storage.py
async_app/services/: encryption.py  mixins.py
migrations/: env.py
migrations/versions/: 63715bf08cfb_init.py  9ebc5ebbf291_add_fields_to_user_py.py  b46c52f31803_0003_rename_created_at.py  c2af7c1b7004_add_created_at_column.py
templates/: base.html  header.html  home.html
templates/account/: login.html  register.html
templates/notes/: change_note_form.html  create_form.html  show_note.html
