[tool.poetry]
name = "async_app"
version = "0.1.0"
description = ""
authors = ["ig-rudenko <ig.rudenko1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
aiohttp = "^3.9.3"
aiohttp-jinja2 = "^1.6"
sqlalchemy = "^2.0.27"
aiosqlite = "^0.20.0"
aiohttp-session = "^2.12.0"
redis = "^5.0.1"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
